<resources>
    <string name="app_name">Covidata 2019</string>
    <string name="signature">Made@EPITA</string>
    <string name="student1">Application made by : Akram ZABAT</string>
    <string name="student2">Maxime LEHERLE</string>
    <string name="student3">Shubhamkumar PATEL</string>


    <!-- Code data-->
    <string name="data">Data</string>
    <string name="graph">Graph</string>
    <string name="mystery">Play Game</string>
    <string name="totals">Totals</string>
    <string name="world">World :</string>
    <string name="confirmed">Confirmed :</string>
    <string name="deaths">Deaths :</string>
    <string name="recovered">Recovered :</string>
    <string name="country">By Country :</string>

    <string name="confirmedBtn">Confirmed</string>
    <string name="deathsBtn">Deaths</string>
    <string name="recoveredBtn">Recovered</string>



    <string name="app_presentation">
        Hi friend and welcome into this App.
        You can follow the evolution of the current
        crisis in real time or find this information on
        a specific date. We let you explore and good luck,
        take care of yourself and your loved ones.
        We also made a little game in order to help you to change
        your mind, we hope you will appreciate ! :)
    </string>
    <string name="date_text">Monday 5 April</string>
    <string name="cases_text">600</string>

    <string name="time_15">Time : 15</string>
    <string name="score_0">Score : 0</string>
    <string name="maxscore">max score : 0</string>

    <string name="game_title">/!\\ Catch and kill the Virus /!\\</string>
</resources>