<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#676171"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/copyRights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signature"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/logoEpita"
        app:layout_constraintEnd_toStartOf="@+id/logoEpita"
        app:layout_constraintTop_toTopOf="@+id/logoEpita"
        app:layout_constraintVertical_bias="0.48000002" />

    <ImageView
        android:id="@+id/logoEpita"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/signature"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/logo_epita" />

    <Button
        android:id="@+id/mainDataBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/backgroundbtn"
        android:text="@string/data"
        android:textColor="@color/BtnColor"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/mainGraphBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mainMysteryBtn" />

    <Button
        android:id="@+id/mainMysteryBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/backgroundbtn"
        android:text="@string/mystery"
        android:textColor="@color/BtnColor"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/mainGraphBtn"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/mainGraphBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/backgroundbtn"
        android:text="@string/graph"
        android:textColor="@color/BtnColor"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/mainMysteryBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/mainDataBtn"
        app:layout_constraintTop_toBottomOf="@+id/mainDataBtn" />

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#5B290094"
        android:shadowDx="-10"
        android:shadowDy="10"
        android:shadowRadius="7"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="#1D005E"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />


    <TextView
        android:id="@+id/appPresentation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:gravity="center"
        android:shadowColor="#4FFFFFFF"
        android:shadowDx="-10"
        android:shadowDy="10"
        android:shadowRadius="9"
        android:text="@string/app_presentation"
        android:textColor="@color/SimpleText"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle" />

    <ImageView
        android:id="@+id/mainCoronaImg"
        app:layout_constraintCircleRadius="100dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/mainDataBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appPresentation"
        app:srcCompat="@drawable/corona_img" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />


</androidx.constraintlayout.widget.ConstraintLayout>