<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".DataActivity">

    <TextView
        android:id="@+id/dataTotalsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:shadowColor="#000000"
        android:shadowDx="-10"
        android:shadowDy="10"
        android:shadowRadius="7"
        android:text="@string/totals"
        android:textAllCaps="false"
        android:textColor="@color/Titles"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dataWorldTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#333"
        android:shadowDx="-10"
        android:shadowDy="10"
        android:shadowRadius="7"
        android:layout_marginStart="16dp"
        android:text="@string/world"
        android:textAllCaps="false"
        android:textColor="@color/BtnColor"
        android:textSize="32sp"
        android:textStyle="bold"
        android:padding="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataTotalsTxt" />

    <TextView
        android:id="@+id/dataconfirmedtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:shadowColor="@color/BtnColor"
        android:shadowDx="-10"
        android:shadowDy="10"
        android:shadowRadius="5"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/confirmed"
        android:textColor="@color/SimpleText"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/dataWorldTxt"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/datadeathstxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:shadowColor="@color/BtnColor"
        android:shadowDx="-10"
        android:shadowDy="10"
        android:shadowRadius="5"
        android:text="@string/deaths"
        android:textColor="@color/SimpleText"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/dataconfirmedtxt"
        app:layout_constraintTop_toBottomOf="@+id/dataconfirmedtxt"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/datarecoveredtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:shadowColor="@color/BtnColor"
        android:shadowDx="-10"
        android:shadowDy="10"
        android:shadowRadius="5"
        android:text="@string/recovered"
        android:textColor="@color/SimpleText"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/dataconfirmedtxt"
        app:layout_constraintTop_toBottomOf="@+id/datadeathstxt"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/dataConfirmedWorld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:shadowColor="#000"
        android:shadowDx="-5"
        android:shadowDy="0"
        android:shadowRadius="3"
        android:layout_marginStart="32dp"
        android:textColor="@color/BtnColor"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/dataconfirmedtxt"
        tools:text="0"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/dataDeathsWorld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:shadowColor="#000"
        android:shadowDx="-5"
        android:shadowDy="0"
        android:shadowRadius="3"
        android:textColor="@color/BtnColor"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/dataConfirmedWorld"
        app:layout_constraintTop_toTopOf="@+id/datadeathstxt"
        tools:ignore="RtlSymmetry"
        tools:text="0" />

    <TextView
        android:id="@+id/dataRecoveredWorld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="4dp"
        android:shadowColor="#000"
        android:shadowDx="-5"
        android:shadowDy="0"
        android:shadowRadius="3"
        android:textColor="@color/BtnColor"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/dataConfirmedWorld"
        app:layout_constraintTop_toTopOf="@+id/datarecoveredtxt"
        tools:ignore="RtlSymmetry"
        tools:text="0" />

    <TextView
        android:id="@+id/dataCountryTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:shadowColor="#333"
        android:shadowDx="-10"
        android:shadowDy="10"
        android:shadowRadius="7"
        android:text="@string/country"
        android:textAllCaps="false"
        android:textColor="@color/BtnColor"
        android:textSize="32sp"
        android:textStyle="bold"
        android:padding="4dp"
        app:layout_constraintStart_toStartOf="@+id/dataWorldTxt"
        app:layout_constraintTop_toBottomOf="@+id/datarecoveredtxt" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dataCountryList"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/dataCountryTxt" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />


</androidx.constraintlayout.widget.ConstraintLayout>