<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".GraphActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/graphCountryList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:scrollIndicators="left|right"
        android:scrollbars="horizontal"
        android:scrollbarFadeDuration="@android:integer/config_mediumAnimTime"
        android:scrollbarStyle="insideInset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="m">

    </androidx.recyclerview.widget.RecyclerView>


    <Button
        android:id="@+id/graphConfirmedBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/backgroundlist"
        android:padding="4dp"
        android:shadowColor="@color/white"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="1"
        android:text="@string/confirmedBtn"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/graphDeathsBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7" />

    <Button
        android:id="@+id/graphDeathsBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/backgroundlist"
        android:padding="4dp"
        android:shadowColor="@color/white"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="1"
        android:text="@string/deathsBtn"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/graphRecoveredBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/graphConfirmedBtn"
        app:layout_constraintTop_toTopOf="@+id/graphConfirmedBtn" />

    <Button
        android:id="@+id/graphRecoveredBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/backgroundlist"
        android:padding="4dp"
        android:shadowColor="@color/white"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="1"
        android:text="@string/recoveredBtn"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/graphDeathsBtn"
        app:layout_constraintTop_toTopOf="@+id/graphConfirmedBtn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/BarRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/backgroundlist"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/graphDeathsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/graphCountryList" />

</androidx.constraintlayout.widget.ConstraintLayout>