<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/appBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/backgroundcalendar"
        app:layout_constraintBottom_toTopOf="@+id/ScoreText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameMaxScore">

        <ImageView
            android:id="@+id/Case00"
            android:layout_width="116dp"
            android:layout_height="166dp"
            android:contentDescription="Image00"
            android:onClick="IncreaseScore"
            android:visibility="invisible"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@drawable/covid" />

        <ImageView
            android:id="@+id/Case01"
            android:layout_width="116dp"
            android:layout_height="166dp"
            android:contentDescription="Image01"
            android:onClick="IncreaseScore"
            android:visibility="invisible"
            app:layout_column="1"
            app:layout_row="0"
            app:srcCompat="@drawable/covid" />

        <ImageView
            android:id="@+id/Case02"
            android:layout_width="116dp"
            android:layout_height="166dp"
            android:contentDescription="Image02"
            android:onClick="IncreaseScore"
            android:visibility="invisible"
            app:layout_column="2"
            app:layout_row="0"
            app:srcCompat="@drawable/covid" />

        <ImageView
            android:id="@+id/Case10"
            android:layout_width="116dp"
            android:layout_height="166dp"
            android:contentDescription="Image10"
            android:onClick="IncreaseScore"
            android:visibility="invisible"
            app:layout_column="0"
            app:layout_row="1"
            app:srcCompat="@drawable/covid" />

        <ImageView
            android:id="@+id/Case11"
            android:layout_width="116dp"
            android:layout_height="166dp"
            android:contentDescription="Image11"
            android:onClick="IncreaseScore"
            android:visibility="invisible"
            app:layout_column="1"
            app:layout_row="1"
            app:srcCompat="@drawable/covid" />

        <ImageView
            android:id="@+id/Case12"
            android:layout_width="116dp"
            android:layout_height="166dp"
            android:contentDescription="Image12"
            android:onClick="IncreaseScore"
            android:visibility="invisible"
            app:layout_column="2"
            app:layout_row="1"
            app:srcCompat="@drawable/covid" />

        <ImageView
            android:id="@+id/Case20"
            android:layout_width="116dp"
            android:layout_height="166dp"
            android:contentDescription="Image20"
            android:onClick="IncreaseScore"
            android:visibility="invisible"
            app:layout_column="0"
            app:layout_row="2"
            app:srcCompat="@drawable/covid" />

        <ImageView
            android:id="@+id/Case21"
            android:layout_width="116dp"
            android:layout_height="166dp"
            android:contentDescription="Image21"
            android:onClick="IncreaseScore"
            android:visibility="invisible"
            app:layout_column="1"
            app:layout_row="2"
            app:srcCompat="@drawable/covid" />

        <ImageView
            android:id="@+id/Case22"
            android:layout_width="116dp"
            android:layout_height="166dp"
            android:contentDescription="Image22"
            android:onClick="IncreaseScore"
            android:visibility="invisible"
            app:layout_column="2"
            app:layout_row="2"
            app:srcCompat="@drawable/covid" />


    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/TimerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="150dp"
        android:gravity="center"
        android:text="@string/time_15"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameTitle" />

    <TextView
        android:id="@+id/ScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/backgroundbtn_selected"
        android:gravity="center"
        android:padding="6dp"
        android:shadowColor="@color/white"
        android:shadowDx="-6"
        android:shadowRadius="3"
        android:text="@string/score_0"
        android:textAlignment="center"
        android:textColor="@color/Titles"
        android:textSize="25sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:paddingHorizontal="4dp"
        android:shadowColor="@color/white"
        android:shadowDx="-6"
        android:shadowRadius="3"
        android:text="@string/game_title"
        android:textColor="@color/Red"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gameMaxScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/maxscore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TimerText" />

</androidx.constraintlayout.widget.ConstraintLayout>